--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,3 @@
 [tool:pytest]
-addopts = -v --cov blendfile --cov-report term-missing --ignore node_modules -x --ff tests/
+addopts = -v --cov blendfile --ignore node_modules -x --ff tests/
 
